--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,40 @@ body {
   font-style: normal;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding-left: 0;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid red;
+  margin: 0 auto;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.header {
+  padding-right: 24;
+  padding-bottom: 25;
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
