--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,7 @@ section {
   background-color: var(--text-nav-link-hover-color);
   cursor: pointer;
   border-radius: 4px;
+  margin-bottom: 200px;
 }
 
 .hero-btn:hover,
@@ -198,9 +199,11 @@ section {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
 .studio-text {
+  max-width: 270px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -209,12 +212,18 @@ section {
 }
 
 /* Приклади робіт */
+.section-work {
+  padding-top: 0px;
+  padding-bottom: 94px;
+}
+
 .work-examp-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
 }
 
 /* Команда */
@@ -223,14 +232,20 @@ section {
 }
 
 .team-main-title {
+  text-align: center;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
+  margin-bottom: 50px;
 }
 
 .team-item {
   background-color: var(--hero-title-color);
+}
+
+.img-foto {
+  margin-bottom: 30px;
 }
 
 .team-title {
@@ -239,6 +254,7 @@ section {
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
+  margin-bottom: 10px;
 }
 
 .team-pos {
@@ -248,6 +264,7 @@ section {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--auth-link-color);
+  padding-bottom: 30px;
 }
 
 /* footer */
