--- a/css/styles.css
+++ b/css/styles.css
@@ -125,10 +125,11 @@ section {
 .site-nav {
   display: flex;
   align-items: center;
+  gap: 50px;
 }
-.site-nav .item + .item {
+/* .site-nav .item + .item {
   margin-left: 50px;
-}
+} */
 
 .site-nav .link.current {
   color: var(--text-nav-link-hover-color);
